// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render correctly 1`] = `
<div
  className="layout"
>
  <div
    className="main"
  >
    <div
      className="footer"
    >
      <div
        className="footer"
      >
        Developed by
         
        <a
          className="link"
          href="https://eddysims.com"
          target="_blank"
        >
          Eddy Sims
        </a>
        <a
          className="link"
          href="https://find-my-blocks.eddysims.com/donate"
          target="_blank"
        >
          <svg
            className="feather feather-heart "
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
          >
            <g
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<path d=\\"M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z\\"></path>",
                }
              }
            />
          </svg>
          Make a donation
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders all areas correctly 1`] = `
<div
  className="layout"
>
  <div
    className="sidebar"
  >
    sidebar
  </div>
  <div
    className="main"
  >
    <div
      className="footer"
    >
      <div
        className="footer"
      >
        Developed by
         
        <a
          className="link"
          href="https://eddysims.com"
          target="_blank"
        >
          Eddy Sims
        </a>
        <a
          className="link"
          href="https://find-my-blocks.eddysims.com/donate"
          target="_blank"
        >
          <svg
            className="feather feather-heart "
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
          >
            <g
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<path d=\\"M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z\\"></path>",
                }
              }
            />
          </svg>
          Make a donation
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders all areas correctly 2`] = `
<div
  className="layout"
>
  <div
    className="main"
  >
    <div
      className="box"
    >
      settings
    </div>
    <div
      className="footer"
    >
      <div
        className="footer"
      >
        Developed by
         
        <a
          className="link"
          href="https://eddysims.com"
          target="_blank"
        >
          Eddy Sims
        </a>
        <a
          className="link"
          href="https://find-my-blocks.eddysims.com/donate"
          target="_blank"
        >
          <svg
            className="feather feather-heart "
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
          >
            <g
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<path d=\\"M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z\\"></path>",
                }
              }
            />
          </svg>
          Make a donation
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders all areas correctly 3`] = `
<div
  className="layout"
>
  <div
    className="main"
  >
    <div
      className="box"
    >
      <h1
        className="heading h1"
      >
        title
      </h1>
    </div>
    <div
      className="footer"
    >
      <div
        className="footer"
      >
        Developed by
         
        <a
          className="link"
          href="https://eddysims.com"
          target="_blank"
        >
          Eddy Sims
        </a>
        <a
          className="link"
          href="https://find-my-blocks.eddysims.com/donate"
          target="_blank"
        >
          <svg
            className="feather feather-heart "
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
          >
            <g
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<path d=\\"M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z\\"></path>",
                }
              }
            />
          </svg>
          Make a donation
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders all areas correctly 4`] = `
<div
  className="layout"
>
  <div
    className="main"
  >
    <div
      className="box"
    >
      cards
    </div>
    <div
      className="footer"
    >
      <div
        className="footer"
      >
        Developed by
         
        <a
          className="link"
          href="https://eddysims.com"
          target="_blank"
        >
          Eddy Sims
        </a>
        <a
          className="link"
          href="https://find-my-blocks.eddysims.com/donate"
          target="_blank"
        >
          <svg
            className="feather feather-heart "
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
          >
            <g
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<path d=\\"M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z\\"></path>",
                }
              }
            />
          </svg>
          Make a donation
        </a>
      </div>
    </div>
  </div>
</div>
`;
